app/jenkins.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kompose.service.type: NodePort
    creationTimestamp: null
    labels:
      io.kompose.service: jenkins
    name: jenkins
  spec:
    ports:
    - name: "80"
      port: 80
      targetPort: 8080
    - name: "443"
      port: 443
      targetPort: 8443
    - name: "50000"
      port: 50000
      targetPort: 50000
    selector:
      io.kompose.service: jenkins
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    annotations:
      kompose.service.type: NodePort
    creationTimestamp: null
    name: jenkins
  spec:
    replicas: 1
    strategy:
      type: Recreate
    template:
      metadata:
        creationTimestamp: null
        labels:
          io.kompose.service: jenkins
      spec:
        containers:
        - image: jenkinsci/jenkins:lts
          name: jenkins
          ports:
          - containerPort: 8080
          - containerPort: 8443
          - containerPort: 50000
          resources: {}
          volumeMounts:
          - mountPath: /var/jenkins_home
            name: jenkins-jenkins-data
        restartPolicy: Always
        volumes:
        - name: jenkins-jenkins-data
          persistentVolumeClaim:
            claimName: pvc001
  status: {}
kind: List
metadata: {}
