app/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.service.type: NodePort
  creationTimestamp: null
  labels:
    io.kompose.service: jenkins
  name: jenkins
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 8080
  - name: "443"
    port: 443
    targetPort: 8443
  - name: "50000"
    port: 50000
    targetPort: 50000
  selector:
    io.kompose.service: jenkins
  type: NodePort
